--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,8 @@
 baseURL = "https://poems.akhil.me"
 languageCode = "en-us"
 title = "Poems by Akhil"
+theme = "ed"
 summaryLength = 10
-
-[module]
-  [[module.imports]]
-    path = "github.com/sergeyklay/gohugo-theme-ed"
 
 [outputs]
   home = ["HTML", "RSS", "JSON"]
